--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html , body{
     align-items: center;
     justify-content: center;
     height: 100%;
-    background-color: burlywood;
+    background-color: rgb(116, 157, 204);
 }
 #panel{
     width: 80%;
@@ -25,7 +25,7 @@ html , body{
 #top{
     width: 100%;
     height: 10%;
-    background-color: rgb(189, 140, 76);
+    background-color: rgb(24, 87, 160);
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -35,11 +35,15 @@ html , body{
     align-items: center;
     gap: 15px;
 }
+.elem h2{
+    font-weight: 300;
+    color: white;
+}
 .box{
     display: flex;
     align-items: center;
     background-color: antiquewhite;
-    color: rgb(121, 80, 28);
+    color: rgb(24, 87, 160);
     font-weight: 600;
     font-size: 20px;
     padding: 10px 20px;
@@ -49,16 +53,18 @@ html , body{
     width: 100%;
     height: calc(100% - 10%);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     padding: 20px;
+    background-color: antiquewhite;
     gap: 8px;
 }
 .bubble{
     height: 50px;
     width: 50px;
-    background-color: rgb(180, 127, 58);
+    background-color: rgb(41, 90, 158);
     display: flex;
     font-size: 25px;
     align-items: center;
@@ -68,6 +74,20 @@ html , body{
     font-weight: 500;
 }
 .bubble:hover{
-    background-color: rgb(122, 73, 9);
+    background-color: rgb(13, 67, 138);
+    cursor: pointer;
+}
+#btm h2{
+    font-size: xx-large;
+}
+#btm button{
+    background-image: linear-gradient(#5d92c4,#2e5db4 );
+    padding: 10px 20px;
+    color: white;
+    font-size: large;
+    border-radius: 20px;
+}
+#btm button:hover{
+    background-image:linear-gradient(#2f6eb5 ,#5daac6) ;
     cursor: pointer;
 }
